--- a/templates/back-end/root-app-directory-htaccess.template
+++ b/templates/back-end/root-app-directory-htaccess.template
@@ -42,6 +42,8 @@ RewriteEngine on
 #PHP5
 <IfModule mod_php5.c>
 
+php_value memory_limit 128M
+
 php_value upload_max_filesize 8M
 
 php_value post_max_size 20M
@@ -54,6 +56,8 @@ php_value max_execution_time 100
 
 #PHP7
 <IfModule mod_php7.c>
+
+php_value memory_limit 128M
 
 php_value upload_max_filesize 8M
 
