--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_script:
   - sleep 1
   # Run script
 script:
- - phpunit
+ - phpunit cron
 # After a build, send email notification with the build results
 notifications:
  email: mike@dragonfrugal.com
