--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
   - '7.2'
   - '7.3'
   - '7.4'
-  - nightly
+#  - nightly # PHP nightly build
 # php7 compat issues  - hhvm # on Trusty only
 # php7 compat issues  - hhvm-nightly
 before_script:
