--- a/templates/back-end/root-app-directory-htaccess.template
+++ b/templates/back-end/root-app-directory-htaccess.template
@@ -37,7 +37,7 @@ RewriteEngine on
 
 # Webhooks
 RewriteCond %{REQUEST_URI} hook/(.*) [NC]
-RewriteRule hook/([^\.]+)$ web-hook.php?webhook_hash=$1 [NC,L]
+RewriteRule hook/([^\.]+)$ web-hook.php?webhook_params=$1 [NC,L]
 
 
 # API
